2022-12-07T00:26:49Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3634681318 # 689
* notice: last 14d: unq all: 2 5800
* notice: prev accum: outdated-unq outdated-all / unq all: 1248 93548 / 1268 99297
* notice: next accum: outdated-unq outdated-all / unq all: 1250 93963 / 1268 99763
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -30 / +1 +415 -0 -0 / 1 415
* notice: removed / changed dates: [2022-11-22] / [2022-11-23 2022-12-06]

2022-12-06T16:03:41Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3631216684 # 688
* notice: last 14d: unq all: 2 5749
* notice: prev accum: outdated-unq outdated-all / unq all: 1248 93548 / 1268 99321
* notice: next accum: outdated-unq outdated-all / unq all: 1248 93548 / 1268 99297
* notice: prev exec diff / last date diff / accum: unq all: +0 +123 -0 -147 / +1 +266 -0 -0 / 1 266
* notice: removed / changed dates: [] / [2022-11-22 2022-12-06]

2022-12-06T08:07:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3627648994 # 687
* notice: last 14d: unq all: 2 5773
* notice: prev accum: outdated-unq outdated-all / unq all: 1248 93548 / 1267 99352
* notice: next accum: outdated-unq outdated-all / unq all: 1248 93548 / 1268 99321
* notice: prev exec diff / last date diff / accum: unq all: +1 +145 -0 -176 / +1 +143 -0 -0 / 1 143
* notice: removed / changed dates: [] / [2022-11-22 2022-12-05 2022-12-06]

2022-12-06T00:24:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3625240679 # 686
* notice: last 14d: unq all: 2 5804
* notice: prev accum: outdated-unq outdated-all / unq all: 1246 93134 / 1267 98881
* notice: next accum: outdated-unq outdated-all / unq all: 1248 93548 / 1267 99352
* notice: prev exec diff / last date diff / accum: unq all: +0 +149 -0 -24 / +1 +415 -0 -0 / 1 415