@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-12-07T00:26:49Z",
-  "count" : 415,
-  "count_minmax" : [ 143, 415 ],
-  "count_decinc" : [ -0, +415 ],
+  "timestamp" : "2022-12-07T08:06:48Z",
+  "count" : 417,
+  "count_minmax" : [ 143, 417 ],
+  "count_decinc" : [ -0, +417 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
