@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-12-07T08:06:48Z",
-  "count" : 214,
-  "count_minmax" : [ 143, 416 ],
-  "count_decinc" : [ -202, +416 ],
+  "count" : 145,
+  "count_minmax" : [ 145, 145 ],
+  "count_decinc" : [ -0, +145 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
