@@ -1,10 +1,10 @@
 {
-  "count": 5800,
-  "uniques": 2,
+  "count": 5775,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2022-11-23T00:00:00Z",
-      "count": 386,
+      "count": 214,
       "uniques": 2
     },
     {
@@ -69,8 +69,13 @@
     },
     {
       "timestamp": "2022-12-06T00:00:00Z",
-      "count": 415,
+      "count": 417,
       "uniques": 1
+    },
+    {
+      "timestamp": "2022-12-07T00:00:00Z",
+      "count": 145,
+      "uniques": 2
     }
   ]
 }
