@@ -1,3 +1,11 @@
+2022-12-07T08:06:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3636987697 # 690
+* notice: last 14d: unq all: 3 5775
+* notice: prev accum: outdated-unq outdated-all / unq all: 1250 93963 / 1268 99763
+* notice: next accum: outdated-unq outdated-all / unq all: 1250 93963 / 1270 99738
+* notice: prev exec diff / last date diff / accum: unq all: +2 +147 -0 -172 / +2 +145 -0 -0 / 2 145
+* notice: removed / changed dates: [] / [2022-11-23 2022-12-06 2022-12-07]
+
 2022-12-07T00:26:49Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3634681318 # 689
 * notice: last 14d: unq all: 2 5800
